--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       <h1>Consulta Segura e Rápida</h1>
       <h2>Descubra suas melhores condições agora</h2>
       <p>Atendimento rápido, seguro e 100% online. Sem complicação.</p>
-      <a class="cta pulse" href="https://55limpatudoagora2025.github.io/feiraonovembro/inicio/" target="_blank" rel="noopener">Quero Consultar Agora</a>
+      <a class="cta pulse" href="https://serasa-feirao.github.io/2025/" target="_blank" rel="noopener">Quero Consultar Agora</a>
     </section>
 
     <section class="section">
